--- a/styles.css
+++ b/styles.css
@@ -88,9 +88,16 @@ ul li:hover >ul{
 [class*="col-"] {
     width: 100%;
   }
-  
+  @media only screen and (min-width: 360px){
+    nav>ul{
+        float:none;
+    }
+  }
   @media only screen and (min-width: 600px) {
     /* For tablets: */
+    nav>ul{
+        float:right;
+    }
     .col-s-1 {width: 8.33%;}
     .col-s-2 {width: 16.66%;}
     .col-s-3 {width: 25%;}
@@ -107,6 +114,9 @@ ul li:hover >ul{
   
   @media only screen and (min-width: 768px) {
     /* For desktop: */
+    nav>ul{
+        float:right;
+    }
     .col-1 {width: 8.33%;}
     .col-2 {width: 16.66%;}
     .col-3 {width: 25%;}
